--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -1,156 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#eaedf2"
-        tools:context=".acount.SigninActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <import type="android.view.View"></import>
+        <variable name="viewModel" type="door.cyron.house.housedoor.acount.SigninViewmodel"></variable>
+    </data>
+    <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#eaedf2"
+            tools:context=".acount.SigninActivity">
 
 
-    <ImageView android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:scaleType="fitXY" android:id="@+id/imageView"/>
+        <ImageView android:layout_width="match_parent"
+                   android:layout_height="match_parent"
+                   android:scaleType="fitXY" android:id="@+id/imageView"/>
 
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            android:paddingLeft="15dp"
-            android:background="@drawable/ic_rd_corner"
-            android:id="@+id/linearLayout"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="43dp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent">
-        <EditText
-                android:layout_width="match_parent"
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"
-                android:ems="10"
-                android:paddingTop="10dp"
-                android:id="@+id/etEmail"
-                android:drawableLeft="@drawable/ic_email"
-                android:hint="Email"
-                android:textSize="15sp"
-                android:textColorHint="@color/colorPrimary"
-                android:drawablePadding="10dp"
-                android:background="@null"
-                android:fontFamily="sans-serif-smallcaps"/>
-        <LinearLayout android:layout_width="match_parent"
-                      android:orientation="horizontal"
-                      android:layout_height="wrap_content">
-            <View
+                app:layout_constraintStart_toStartOf="parent"
+                android:paddingLeft="15dp"
+                android:background="@drawable/ic_rd_corner"
+                android:id="@+id/linearLayout"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="43dp"
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent">
+            <EditText
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_weight="0.8"
-                    android:layout_marginBottom="5dp"
-                    android:background="@color/colorPrimary"
-                    android:id="@+id/view"/>
-            <View
+                    android:layout_height="wrap_content"
+                    android:inputType="textEmailAddress"
+                    android:ems="10"
+                    android:paddingTop="10dp"
+                    android:id="@+id/etEmail"
+                    android:drawableLeft="@drawable/ic_email"
+                    android:hint="Email"
+                    android:textSize="15sp"
+                    android:textColorHint="@color/colorPrimary"
+                    android:drawablePadding="10dp"
+                    android:background="@null"
+                    android:fontFamily="sans-serif-smallcaps"/>
+            <LinearLayout android:layout_width="match_parent"
+                          android:orientation="horizontal"
+                          android:layout_height="wrap_content">
+                <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_weight="0.8"
+                        android:layout_marginBottom="5dp"
+                        android:background="@color/colorPrimary"
+                        android:id="@+id/view"/>
+                <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_weight="1"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"
+                />
+            </LinearLayout>
+            <EditText
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_weight="1"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:ems="10"
+                    android:paddingTop="10dp"
+                    android:background="@null"
+                    android:id="@+id/etPassword"
+                    android:textSize="15sp"
+                    android:textColorHint="@color/colorPrimary"
+                    android:hint="*********"
+                    android:drawableLeft="@drawable/ic_password"
+                    android:drawablePadding="10dp"
+                    android:fontFamily="sans-serif-smallcaps"/>
+            <LinearLayout android:layout_width="match_parent"
+                          android:orientation="horizontal"
+                          android:id="@+id/linView"
+                          android:visibility="gone"
+                          android:layout_height="wrap_content">
+                <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_weight="0.8"
+                        android:layout_marginBottom="5dp"
+                        android:background="@color/colorPrimary"
+                />
+                <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_weight="1"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"
+                />
+            </LinearLayout>
+            <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:ems="10"
+                    android:paddingTop="10dp"
+                    android:visibility="gone"
+                    android:background="@null"
+                    android:id="@+id/etRePassword"
+                    android:textColorHint="@color/colorPrimary"
+                    android:hint="*********"
+                    android:drawableLeft="@drawable/ic_password"
+                    android:drawablePadding="10dp"
+
             />
         </LinearLayout>
-        <EditText
-                android:layout_width="match_parent"
+        <android.support.design.widget.FloatingActionButton
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:ems="10"
-                android:paddingTop="10dp"
-                android:background="@null"
-                android:id="@+id/etPassword"
-                android:textSize="15sp"
-                android:textColorHint="@color/colorPrimary"
-                android:hint="*********"
-                android:drawableLeft="@drawable/ic_password"
-                android:drawablePadding="10dp"
+                android:clickable="true"
+                android:id="@+id/floatingActionButton"
+                android:transitionName="demo"
+                app:backgroundTint="@color/colorPrimary"
+                android:src="@drawable/ic_next"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/linearLayout"
+                app:layout_constraintBottom_toBottomOf="@+id/linearLayout"/>
+        <TextView
+                android:text="Forgot Password ?"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_rd_corner_left"
+                android:textColor="@color/colorPrimaryDark"
+                android:id="@+id/tvForgetpass" android:textSize="18sp"
+                android:paddingBottom="10dp" android:paddingLeft="25dp"
+                android:paddingRight="10dp" android:paddingTop="10dp"
+                app:layout_constraintBottom_toTopOf="@+id/idTittle"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" android:fontFamily="sans-serif-smallcaps"/>
+
+        <TextView
+                android:text="Login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/idTittle"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textSize="30sp"
+                android:textColor="@color/colorPrimary"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0.25"
                 android:fontFamily="sans-serif-smallcaps"/>
-        <LinearLayout android:layout_width="match_parent"
-                      android:orientation="horizontal"
-                      android:id="@+id/linView"
-                      android:visibility="gone"
-                      android:layout_height="wrap_content">
-            <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_weight="0.8"
-                    android:layout_marginBottom="5dp"
-                    android:background="@color/colorPrimary"
-            />
-            <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_weight="1"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
-            />
-        </LinearLayout>
-        <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:ems="10"
-                android:paddingTop="10dp"
-                android:visibility="gone"
-                android:background="@null"
-                android:id="@+id/etRePassword"
-                android:textColorHint="@color/colorPrimary"
-                android:hint="*********"
-                android:drawableLeft="@drawable/ic_password"
-                android:drawablePadding="10dp"
 
-        />
-    </LinearLayout>
-    <android.support.design.widget.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:id="@+id/floatingActionButton"
-            android:transitionName="demo"
-            app:backgroundTint="@color/colorPrimary"
-            android:src="@drawable/ic_next"
-            android:layout_marginEnd="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/linearLayout"
-            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"/>
-    <TextView
-            android:text="Forgot Password ?"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ic_rd_corner_left"
-            android:textColor="@color/colorPrimaryDark"
-            android:id="@+id/tvForgetpass" android:textSize="18sp"
-            android:paddingBottom="10dp" android:paddingLeft="25dp"
-            android:paddingRight="10dp" android:paddingTop="10dp"
-            app:layout_constraintBottom_toTopOf="@+id/idTittle"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:fontFamily="sans-serif-smallcaps"/>
-
-    <TextView
-            android:text="Login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/idTittle"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textSize="30sp"
-            android:textColor="@color/colorPrimary"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.25"
-            android:fontFamily="sans-serif-smallcaps"/>
-
-
-</android.support.constraint.ConstraintLayout>
+        <include
+                layout="@layout/layout_connection_error"
+                android:visibility="@{viewModel.retry?View.VISIBLE:View.GONE}"
+                app:retryListener="@{viewModel.onRetryClick}"
+                tools:visibility="gone"></include>
+    </android.support.constraint.ConstraintLayout>
+</layout>
