--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -160,5 +160,14 @@
                 android:visibility="@{viewModel.retry?View.VISIBLE:View.GONE}"
                 app:retryListener="@{viewModel.onRetryClick}"
                 tools:visibility="gone"></include>
+
+        <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/loder"
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView"/>
     </android.support.constraint.ConstraintLayout>
 </layout>
